cna/vulnapps/drupal-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulnapps-dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  namespace: vulnapps-dev
spec:
  selector:
    matchLabels:
      app: drupal
  replicas: 1
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: harbor-01a.corp.local/vulnerableapps/drupal:8.5.0
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
              requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - couchdb
                  topologyKey: "kubernetes.io/hostname"

---
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: vulnapps-dev
  labels:
    app.kubernetes.io/name: drupal
spec:
  type: LoadBalancer
  loadBalancerIP: 172.16.110.51
  ports:
  - port: 80
  selector:
    app: drupal
